syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message SalesArrangementIdRequest {
	int32 SalesArrangementId = 1;
}